Fix footer image vertical align

--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -41,5 +41,8 @@
     }
     .notice {
         padding: 2%;
+        img {
+            vertical-align: bottom;
+        }
     }
 }
